# dsvdc24HA

./: .gitignore  pyproject.toml
docs/superpowers/plans/: 2026-03-26-pyDSvDCAPIv2.md
docs/superpowers/specs/: 2026-03-26-pyDSvDCAPIv2-design.md
examples/: realworld_temperature_sensor.py  simple_light.py
pyDSvDCAPIv2/: __init__.py  connection.py  constants.py  device.py  dsuid.py  enums.py  exceptions.py  heartbeat.py  persistence.py  vdc.py  ws_client.py
pyDSvDCAPIv2/proto/: __init__.py  command_pb2.py  device_announcement_pb2.py  error_pb2.py  event_pb2.py  firmware_pb2.py  heartbeat_pb2.py  measurement_pb2.py  scene_pb2.py  service_announcement_pb2.py  state_pb2.py
tests/: test_connection.py  test_constants.py  test_device.py  test_dsuid.py  test_enums.py  test_persistence.py  test_vdc.py
