[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pyDSvDCAPIv2"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "protobuf>=6.0",
    "pyyaml>=6.0",
    "websockets>=11.0",
    "zeroconf>=0.80.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "grpcio-tools>=1.50",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
